# salticidae

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  TODO.rst
cmake/Modules/: FindLibuv.cmake
include/salticidae/: buffer.h  conn.h  crypto.h  event.h  msg.h  netaddr.h  network.h  queue.h  ref.h  stream.h  type.h  util.h
src/: config.h.in  conn.cpp  event.cpp  msg.cpp  netaddr.cpp  network.cpp  stream.cpp  type.cpp  util.cpp
test/: .gitignore  CMakeLists.txt  Makefile  bench_network.cpp  bench_network_tls.cpp  test_bounded_recv_buffer.cpp  test_msg.cpp  test_msgnet.cpp  test_msgnet_c.c  test_msgnet_tls.cpp  test_network.cpp  test_p2p.cpp  test_p2p_min.cpp  test_p2p_stress.cpp  test_p2p_tls.cpp  test_queue.cpp  test_stream.cpp
